OSSM/1_34/must-gather.local.2392184673243315730/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-88edd13801b2ba7aa4bc7c344e18992e2ebd100cc49e959b315bb7e8c8d20298/namespaces/serving-tests/security.istio.io/authorizationpolicies/allow-from-knative-and-istio.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"security.istio.io/v1beta1","kind":"AuthorizationPolicy","metadata":{"annotations":{},"name":"allow-from-knative-and-istio","namespace":"serving-tests"},"spec":{"action":"ALLOW","rules":[{"from":[{"source":{"namespaces":["serving-tests","knative-serving","istio-system"]}}]},{"from":[{"source":{"namespaces":["knative-eventing"]}}],"when":[{"key":"request.headers[Kn-Namespace]","values":["serving-tests"]}]}]}}
  creationTimestamp: "2025-01-09T14:46:57Z"
  generation: 1
  managedFields:
  - apiVersion: security.istio.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
      f:spec:
        .: {}
        f:action: {}
        f:rules: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2025-01-09T14:46:57Z"
  name: allow-from-knative-and-istio
  namespace: serving-tests
  resourceVersion: "43975"
  uid: d0d4becf-8515-4689-b969-6b2aaa83a3d1
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces:
        - serving-tests
        - knative-serving
        - istio-system
  - from:
    - source:
        namespaces:
        - knative-eventing
    when:
    - key: request.headers[Kn-Namespace]
      values:
      - serving-tests
